frontend: fix "show password" checkbox which was too large
In the PasswordSingleInput component, the checkbox for showing the
password was too large, running out of bounds of a dialog and being
clickable from a large area

--- a/frontends/web/src/components/forms/input.css
+++ b/frontends/web/src/components/forms/input.css
@@ -54,3 +54,8 @@
 .errorText > span > span {
     margin-left: 5px;
 }
+
+.input input[type=checkbox] {
+    width: auto;
+    height: auto;
+}
